2019-01-24  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi: Refill paragraphs and normalize inter-sentence
	spacing so the Emacs move-by-sentence commands work correctly.

2019-01-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Replace "config file" with "configuration
	file" throughout.

2019-01-23  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Command line option variables): Improve table
	formatting to fix overlapping columns and revise text slightly.

2019-01-23  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Global config file): Change example to use the
	Tcl "switch" command instead of the deprecated "case" command.

2019-01-12  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (runtest_file_p procedure): Fix description of
	the structure of the "runtests" argument.

2019-01-12  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Various documentation fixes.

2019-01-10  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.libs/clone_output.test: Use new test harness
	for verifying output of clone_output.

	* testsuite/runtest.libs/default_procs.tcl (send_error): Roll into
	template using store_test_output.
	(send_log): Likewise.
	(send_user): Likewise.
	(clear_test_output): New proc.
	(store_test_output): New proc.

	* lib/framework.exp (clone_output): Actually send errors to the
	error stream; bug found while improving testsuite.

2019-01-10  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.libs/libs.exp (process_test): Handle blank
	lines from child process correctly.

2019-01-02  Jacob Bachmeyer  <jcb62281@gmail.com>

	* NEWS: Document report card.

	* Makefile.am (clean-local): Add target.
	(clean-local-check): Add target; mark as PHONY.
	(commands_DATA): Add "report-card" scripts.
	(dist_man_MANS): Add dejagnu-report-card.1 and split.
	(DEJATOOL): Add "report-card" tool.
	(TESTSUITE_FILES): Add testsuite for "report-card" tool.

	* commands/report-card.awk: New command script.
